# matrix

./: .travis.yml  CMakeLists.txt
html/: globals.html  globals_func.html
html/search/: all_0.js  all_1.js  files_0.js  functions_0.js  functions_1.js  searchdata.js
include/: array.h  lib.h  matrix2d.h  pretty.h
src/: lib.cpp  matrix.cpp
test/: gtest.cpp
